<resources>
    <string name="app_name">Sport Activities</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sport Activities</string>
    <string name="nav_header_subtitle">Lukáš Chytílek</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_sport">Add sport activity</string>

    <string name="sport_activity">Sport Activity</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="duration">Duration in minutes</string>
    <string name="db_type">Database</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>

    <string name="fill_name">Please fill empty name</string>
    <string name="fill_location">Please fill empty location</string>
    <string name="fill_duration">Please fill empty duration</string>
    <string name="name_exists">Name already exists</string>

    <string name="delete">Delete</string>
    <string name="delete_record">Do you wish to delete <b>%1$s</b>?</string>

    <string name="failed_read_firebase">Failed to read from Firebase</string>

</resources>
