<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddSportActivityFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:text="@string/sport_activity"/>

    <EditText
        android:id="@+id/sport_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginEnd="@dimen/spacing_20"
        android:hint="@string/name"
        android:maxLines="1"
        android:inputType="text"/>

    <EditText
        android:id="@+id/sport_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginEnd="@dimen/spacing_20"
        android:hint="@string/location"
        android:maxLines="1"
        android:inputType="text"/>

    <EditText
        android:id="@+id/sport_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginEnd="@dimen/spacing_20"
        android:hint="@string/duration"
        android:maxLines="1"
        android:inputType="numberSigned"/>

    <Spinner
        android:id="@+id/db_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginEnd="@dimen/spacing_20"
        android:prompt="@string/db_type"/>

    <Button
        android:id="@+id/sport_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginStart="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginEnd="@dimen/spacing_20"
        android:layout_gravity="end"/>

</LinearLayout>